test/macro/fail/setCount2.em
# Set too many things

# Arg: --ast2
# Expect failure

a b = 3